--- a/ShaspectBuilder/ShaspectBuilder.csproj
+++ b/ShaspectBuilder/ShaspectBuilder.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="AspectDeclaration.cs" />
     <Compile Include="AspectsInjector.cs" />
+    <Compile Include="NestingStrategy.cs" />
     <Compile Include="AssemblyResolver.cs" />
     <Compile Include="ILTools.cs" />
     <Compile Include="InitClassGenerator.cs" />
