--- a/Shaspect/Shaspect.csproj
+++ b/Shaspect/Shaspect.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="BaseAspectAttribute.cs" />
     <Compile Include="ElementTargets.cs" />
+    <Compile Include="MethodExecInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
