Implement OnSuccess aspect method with method's return value

--- a/ShaspectBuilder/ShaspectBuilder.csproj
+++ b/ShaspectBuilder/ShaspectBuilder.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="AspectDeclaration.cs" />
     <Compile Include="AspectsInjector.cs" />
+    <Compile Include="CollectionExtensions.cs" />
     <Compile Include="NestingStrategy.cs" />
     <Compile Include="AssemblyResolver.cs" />
     <Compile Include="ILTools.cs" />
