--- a/Shaspect.Tests/Shaspect.Tests.csproj
+++ b/Shaspect.Tests/Shaspect.Tests.csproj
@@ -40,6 +40,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="NSubstitute, Version=1.8.2.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
       <HintPath>..\packages\NSubstitute.1.8.2.0\lib\net45\NSubstitute.dll</HintPath>
       <Private>True</Private>
@@ -71,8 +72,10 @@
     <Compile Include="CalleeArgsTests.cs" />
     <Compile Include="CallsFlowTests.cs" />
     <Compile Include="NestedAspectsTest.cs" />
+    <Compile Include="OnSuccessTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OnEntryBasicTests.cs" />
+    <Compile Include="ReturnValueTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shaspect\Shaspect.csproj">
