--- a/Shaspect.Tests/Shaspect.Tests.csproj
+++ b/Shaspect.Tests/Shaspect.Tests.csproj
@@ -68,9 +68,10 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="AspectInitTests.cs" />
+    <Compile Include="AspectInstantiateTests.cs" />
     <Compile Include="CalleeArgsTests.cs" />
     <Compile Include="CallsFlowTests.cs" />
+    <Compile Include="InitializeTests.cs" />
     <Compile Include="NestedAspectsTest.cs" />
     <Compile Include="OnSuccessTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
