--- a/buildPackage/Shaspect.nuspec
+++ b/buildPackage/Shaspect.nuspec
@@ -2,7 +2,8 @@
 <package >
   <metadata minClientVersion="2.5">
     <id>Shaspect</id>
-    <version>1.1.1</version>
+    <version>1.2.0</version>
+	<releaseNotes></releaseNotes>
     <title>Shaspect</title>
     <description>AOP library for C#, injects code in methods using regular attributes</description>
     <authors>Max Shmelev</authors>
